--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
-  <link rel="icon" href="CSS - My Site Images/favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Sacramento&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <title>New Website</title>
@@ -28,7 +28,7 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="" src="CSS - My Site Images/computer.png" alt="computer">
+        <img class="computer" src="CSS - My Site Images/computer.png" alt="computer">
         <h3>Computer Programming</h3>
         <p>I love to program and use HTML, CSS and JavaScript.</p>
       </div>
@@ -43,6 +43,7 @@
       <h2>Get In Touch</h2>
       <h3>I'd like to hear from you.</h3>
       <p>Feel free to contact and follow me on my social media accounts.</p>
+      <a class="btn" href="mailto:name@email.com">CONTACT ME</a><br>
     </div>
   </div>
   
@@ -53,7 +54,7 @@
     <a class="footer-link" href="https://www.instagram.com/joshuaebs/" target="_blank"s>Instagram</a>
     <a class="footer-link" href="https://github.com/Joshua-Salvador" target="_blank"s>GitHub</a>
     <div id="credits">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a></div>
-    <p>© 2020 Salvador, Joshua Enrick B.</p>
+    <p id="copyright">© 2020 Salvador, Joshua Enrick B.</p>
   </div>
   
 
